# GPTi84-Plus

./: .clangd  .env.example  .gitignore  .gitmodules  Justfile  README.md  build.sh  pyproject.toml  run_decoder.sh  ti84-superdeluxe.code-workspace
cemetech_posts/: 1.md
deploy/sudoers/: xander-relay-deploy
deploy/systemd/: relay-llm.service  wsbridge.service
docs/hackspire/: 01-hardware.md  02-ndless.md  03-os-and-comms.md  04-misc-and-ecosystem.md  README.md
docs/tibasic/: 01-overview.md  02-lexical.md  03-types-and-variables.md  04-expressions.md  05-control-flow.md  06-io.md  07-graphics.md  08-math-library.md  09-errors.md  10-portability.md  11-command-index.md  12-glossary.md  README.md
firmware/Unsigned v1.0/: readme.txt  unsigned.8xp
firmware/c/: CMakeLists.txt  CMakePresets.json  README.md  bringup.c  bringup_pio.pio
firmware/c/src/apps/dbus_rdy/: dbus_rdy.c
firmware/c/src/apps/gpti/asm/: base.asm  boot.asm  display.asm  flash.asm  header.asm  interrupt.asm  keyboard.asm  util.asm
firmware/c/src/apps/gpti/privileged/: base.asm
firmware/c/src/tests/bringup/: bringup.c
firmware/codex/: CODEX.8XP  Codex Readme.rtf
firmware/overflow/: OVERFLOW.8XP  UOFLOW.8XP  code.z80  overflow.z80  readme.txt  uoflow.z80
main/: link_dbus.c
programs/asm_chat/: CHAT.8xp  CHAT.z80
programs/asm_hello/: HELLO.8xp  HELLO.z80
programs/asm_hookheart/: HOOKINST.8xp  HOOKINST.z80  HOOKSHOW.8xp  HOOKSHOW.z80
programs/basic_deck/: DECK.8xp
programs/basic_view/: VIEW.8xp  VIEW.basic
references/linkguide/: index.html
references/linkguide/ti89/: clock.html
references/wikiti/: README.md  bcall_4A14_SendVarCmd.md  bcall_4ECA_CancelTransmission.md  bcall_4ED3_SendRAMCmd.md  bcall_4ED6_SendPacket.md  bcall_4ED9_ReceiveAck.md  bcall_4EDC_Send4BytePacket.md  bcall_4EDF_SendDataByte.md  bcall_4EE5_SendAByte.md  bcall_4EEB_GetSmallPacket.md  bcall_4EEE_GetDataPacket.md  bcall_4EF1_SendAck.md  bcall_4EF4_Get4Bytes.md  bcall_4F06_ReceiveVar.md  bcall_4F4E_CheckLinkLines.md  bcall_50E3_LinkStatus.md  hook_9B78_LinkActivity.md  hook_9B84_RawKey.md  hook_9B88_GetCSC.md  hook_9B8C_Homescreen.md  hook_9BD0_SilentLink.md  hook_9BD4_USBActivity.md  hooks_index.md  hooks_overview.md  link_bcalls_index.md  port_00_LinkPort.md  ram_8674_header.md  usb_84plus.md
src/: bridge.py  ca_bundle.py  dbus.py  main.py  net.py  pico_test.py  secrets.py.example
tests/: conftest.py  test_extract_8xp.py  test_packet.py  test_relay_layout.py  test_vartypes.py
ti84_plus/: CMakeLists.txt
ti84_plus/headless/: headless.c  link_loopback.c  mk_hello_8xp.c  mk_link_loopback_8xp.c  tilem_embed.c
ti84_plus/programs/: ECHO.8xp  HELLO.8Xp  HELLO.8xp  HELLO.lst  LOOPBACK.8Xp  echo.asm  hello.asm
ti84_plus/ti84_plus_255/: TI84Plus_OS255.8Xu
ti84_plus/ti84_plus_255/src/: decoder.c  encoder.c
tools/: bastok.py  build_e2e.py  console.py  extract_8xp.py  relay_server.py  ws_bridge.py
vscode-ti84p/: language-configuration.json  package-lock.json  package.json
vscode-ti84p/examples/: demo.ti84p
vscode-ti84p/src/: extension.ts  linter.ts
vscode-ti84p/syntaxes/: ti84p.tmLanguage.json
