[project]
name = "ti84-superdeluxe"
version = "0.1.0"
description = "Pico-bridged TI-84+ tooling: DBUS link, .8Xp codec, WS bridge, relay/console."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mpremote>=1.24.0",
    "pytest>=8.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13.0",
]

[tool.uv]
package = false
